tests/should_fail/redeclaration_of_methods.sd
Color :: struct {
    r, g, b, a: u8;
}

toHex :: method (c: Color) -> string {
    return "#FF00FF";
}

// This should fail with "Redeclaration of method 'toHex'""
toHex :: method (c: Color) -> string {
    return "#FF00FF";
}

toHex :: (c: Color) -> string {
    return "#000000";
}

main :: () {

}